tests/build/fail/widget/module_path_is_invalid.rs
use zero_ui::core::widget;

#[widget($crate::not::a::valid::path)]
pub mod test_widget {}

fn main() {}
